atk.core (02) - html (04) > -------------------------------------------- refactor: update button styles and improve navbar structure

--- a/atkm/src/app/shared/components/content-main/content-main.component.html
+++ b/atkm/src/app/shared/components/content-main/content-main.component.html
@@ -12,10 +12,10 @@
 
       <div class="copilot-suggestions">
         <button class="suggestion-btn" (click)="handleSuggestion('profile')">
-          <div class="suggestion-btn-icon" style="color: #ff79c6;">
+          <div class="suggestion-btn-icon" style="color: #10b981;">
             <svg aria-hidden="true" height="16" viewBox="0 0 16 16" version="1.1" width="16" fill="currentColor">
               <path
-                d="M14.064 0h.186C15.216 0 16 .784 16 1.75v.186a8.752 8.752 0 0 1-2.564 6.186l-.458.459c-.314.314-.641.616-.979.904v3.207c0 .608-.315 1.172-.833 1.49l-2.774 1.707a.749.749 0 0 1-1.11-.418l-.954-3.102a1.214 1.214 0 0 1-.145-.125L3.754 9.816a1.218 1.218 0 0 1-.124-.145L.528 8.717a.749.749 0 0 1-.418-1.11l1.71-2.774A1.748 1.748 0 0 1 3.31 4h3.204c.288-.338.59-.665.904-.979l.459-.458A8.749 8.749 0 0 1 14.064 0Z">
+                d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8Zm8-6.5a6.5 6.5 0 1 0 0 13 6.5 6.5 0 0 0 0-13ZM6.92 6.085h.001a.749.749 0 1 1-1.342-.67c.169-.339.436-.701.849-.977C6.845 4.16 7.369 4 8 4a2.756 2.756 0 0 1 1.637.525c.503.377.863.965.863 1.725 0 .448-.115.83-.329 1.15-.205.307-.47.513-.692.662-.22.149-.41.242-.522.3a.727.727 0 0 0-.076.039l-.002.001h-.001a.75.75 0 0 1-.592-1.378c.074-.029.18-.07.281-.119.099-.048.177-.094.232-.143.059-.051.088-.09.106-.113.024-.029.057-.09.057-.188 0-.24-.086-.49-.287-.64C8.471 5.67 8.256 5.5 8 5.5c-.369 0-.597.09-.74.187a1.028 1.028 0 0 0-.34.398ZM8 11a1 1 0 1 1 0-2 1 1 0 0 1 0 2Z">
               </path>
             </svg>
           </div>
