--- a/atkm/src/app/shared/components/navbar-brand/navbar-brand.component.html
+++ b/atkm/src/app/shared/components/navbar-brand/navbar-brand.component.html
@@ -3,7 +3,7 @@
     <h1 class="menu-brand-title">{{config?.navbar.centerTitle || ''}}</h1>
     <p class="menu-brand-subtitle">
       {{config?.navbar.centerSubtitle || ''}}
-      <span class="menu-brand-badge" *ngIf="config?.navbar.centerBadge">
+      <span class="brand-btn-action" *ngIf="config?.navbar.centerBadge">
         {{config?.navbar.centerBadge || ''}}
       </span>
     </p>
