--- a/atkm/src/app/features/binance/components/binance.component.css
+++ b/atkm/src/app/features/binance/components/binance.component.css
@@ -1,17 +1,32 @@
-/* Conteneur principal */
-.binance-account-container {
-  padding: 20px;
-  max-width: 1200px;
-  margin: 0 auto;
-}
+/* ======================================================================================================== */
+/* ========================= PLACEHOLDER CSS ============================================================== */
+/* ======================================================================================================== */
 
-/* ======================================== */
-.placeholder-content {
+.placeholder-wrapper {
   padding: 40px;
   max-width: 800px;
 }
 
-.feature-list {
+.placeholder-header h1 {
+  font-size: 28px;
+  margin-bottom: 16px;
+}
+
+.placeholder-details h2 {
+  font-size: 14px;
+  font-style: normal;
+  font-weight: normal;
+  max-width: 98%;
+  padding-top: 10px;
+  margin-left: 3px;
+  border-top: 2px solid var(--color-border-muted);
+  color: var(--color-fg-default);
+}
+
+.feature-content {
+  display: flex;
+  flex-direction: column;
+  min-width: 600px;
   margin-top: 30px;
   background: var(--color-canvas-subtle);
   padding: 20px;
@@ -19,41 +34,43 @@
   border: 1px solid var(--color-border-default);
 }
 
-.feature-list h3 {
-  margin-top: 0;
-  color: var(--color-fg-default);
-}
 
-.feature-list ul {
-  list-style-type: disc;
-  padding-left: 20px;
-}
-
-.feature-list li {
-  margin-bottom: 8px;
-  color: var(--color-fg-muted);
-}
-
-/* ======================================== */
-
-
-/* En-tête */
-.account-header {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
+.feature-header h3 {
   align-items: center;
-  margin-bottom: 32px;
+  font-size: 16px;
+  margin-bottom: 24px;
   padding-bottom: 16px;
   border-bottom: 2px solid var(--color-border-muted);
 }
 
+
+ul,
+.feature-list {
+  list-style-type: disc;
+  padding-left: 20px;
+}
+
+li,
+.feature-items {
+  margin-bottom: 8px;
+  color: var(--color-fg-muted);
+}
+
+
+/* ======================================================================================================== */
+/* ========================= BINANCE CSS ============================================================== */
+/* ======================================================================================================== */
+
+.binance-account-container {
+  padding: 20px;
+  max-width: 1200px;
+  margin: 0 auto;
+}
+
+/* En-tête */
 .account-header h1 {
-  margin: 0;
-  padding-bottom: 16px;
-  font-size: 18px;
-  font-weight: 600;
-  color: var(--color-fg-default);
+  font-size: 28px;
+  margin-bottom: 16px;
 }
 
 .refresh-btn {
