--- a/atkm/src/app/shared/components/content-main/content-main.component.html
+++ b/atkm/src/app/shared/components/content-main/content-main.component.html
@@ -1,11 +1,9 @@
-<main class="main-content">
+<main class="content-main">
   <div class="content-wrapper" [class.config-collapsed]="configPanelCollapsed">
-    <div class="main-header">
-      <h1>atk.dashboard</h1>
-    </div>
+    <header class="content-header">atk.dashboard</header>
 
     <!-- Router outlet for dynamic content -->
-    <div class="dynamic-content">
+    <div class="content-dynamic">
       <router-outlet></router-outlet>
     </div>
   </div>
