--- a/atkm/src/app/shared/components/navbar-main/navbar-main.component.html
+++ b/atkm/src/app/shared/components/navbar-main/navbar-main.component.html
@@ -1,5 +1,5 @@
-<header class="side-main">
-  <div class="menu-main">
+<main class="side-main">
+  <menu class="menu-main">
 
     <button class="hamburger-btn" aria-label="Ouvrir le menu de navigation">
       <svg aria-hidden="true" height="16" viewBox="0 0 16 16" version="1.1" width="16" fill="currentColor">
@@ -28,8 +28,8 @@
         {{item}}
       </span>
     </nav>
-  </div>
+  </menu>
 
 
   <!-- <atk-navbar-brand [config]="config.navbar" /> -->
-</header>
+</main>
