--- a/atkm/src/app/shared/components/home-content/home-content.component.html
+++ b/atkm/src/app/shared/components/home-content/home-content.component.html
@@ -1,7 +1,9 @@
-<div class="home-wrapper">
+<div class="placeholder-wrapper">
   <!-- Section Copilot -->
+  <header class="placeholder-header">
+    <h1>Copilot</h1>
+  </header>
   <div class="copilot-section">
-    <h2>Copilot</h2>
     <textarea class="copilot-input" placeholder="Ask Copilot" rows="1" (input)="handleCopilotInput($event)"></textarea>
 
     <div class="copilot-suggestions">
