--- a/atkm/src/app/shared/components/content-main/content-main.component.html
+++ b/atkm/src/app/shared/components/content-main/content-main.component.html
@@ -1,7 +1,8 @@
 <main class="content-main">
   <div class="content-wrapper" [class.config-collapsed]="configPanelCollapsed">
-    <header class="content-header">atk.dashboard</header>
-
+    <header class="content-header">
+      <h3>atk.dashboard</h3>
+    </header>
     <!-- Router outlet for dynamic content -->
     <div class="content-dynamic">
       <router-outlet></router-outlet>
